[package]
name = "reflink-split"
description = "like split(1), but for filesystems with reflink support"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/mati1210/reflink-split"
license = "MPL-2.0"

[dependencies]
byte-unit = "5.1"
env_logger = "0.11"
itoa = "1.0"
log = "0.4"
nix = { version = "0.29", features = ["zerocopy"] }
